try to fix spacing

--- a/style.css
+++ b/style.css
@@ -2,6 +2,12 @@
   margin: 0;
   padding: 0;
 }
+html {
+  height: 100%;
+}
+body {
+  min-height: 100%;
+}
 h3 {
   padding: 1%;
   margin-bottom: -7.5%;
@@ -22,7 +28,7 @@ footer li a {
 }
 .foodType{
   background-color: gray;
-  width: 75%;
+  width: 100%;
   height: 10%;
   font-size: 1.5em;
   display:flex;
@@ -32,7 +38,7 @@ footer li a {
   padding-left: 2.5%;
 }
 .foodList{
-  width: 75%;
+  width: 100%;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -88,7 +94,7 @@ input[type="text"] {
   align-items: center;
 }
 #foodTypesContainer {
-  width: 100%;
+  width: 75%;
   display:flex;
   flex-direction: column;
   justify-content: center;
